[package]
name = "aravis-sys"
version = "0.9.0"
description = "raw FFI-bindings for Aravis"
authors = ["RoboHouse <robohouse@robovalley.com>", "Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
keywords = ["GenICam", "GigE", "USB3", "Vision", "Camera"]
categories = ["multimedia::video"]
repository = "https://github.com/robohouse-delft/aravis-rs"
documentation = "https://docs.rs/aravis-sys"
edition = "2021"
links = "aravis"
build = "build.rs"

[package.metadata.system-deps.aravis_0_8]
name = "aravis-0.8"
version = "0.8"

[package.metadata.system-deps.aravis_0_8.v0_8_3]
version = "0.8.3"

[package.metadata.system-deps.aravis_0_8.v0_8_6]
version = "0.8.6"

[package.metadata.system-deps.aravis_0_8.v0_8_8]
version = "0.8.8"

[package.metadata.system-deps.aravis_0_8.v0_8_11]
version = "0.8.11"

[package.metadata.system-deps.aravis_0_8.v0_8_15]
version = "0.8.15"

[package.metadata.system-deps.aravis_0_8.v0_8_16]
version = "0.8.16"

[package.metadata.system-deps.aravis_0_8.v0_8_17]
version = "0.8.17"

[package.metadata.system-deps.aravis_0_8.v0_8_19]
version = "0.8.19"

[package.metadata.system-deps.aravis_0_8.v0_8_20]
version = "0.8.20"

[package.metadata.system-deps.aravis_0_8.v0_8_22]
version = "0.8.22"

[package.metadata.system-deps.aravis_0_8.v0_8_23]
version = "0.8.23"

[package.metadata.system-deps.aravis_0_8.v0_8_25]
version = "0.8.25"

[package.metadata.system-deps.aravis_0_8.v0_8_27]
version = "0.8.27"

[package.metadata.system-deps.aravis_0_8.v0_8_31]
version = "0.8.31"

[package.metadata.docs.rs]
features = ["dox"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
dox = []
v0_8_3 = []
v0_8_6 = ["v0_8_3"]
v0_8_8 = ["v0_8_6"]
v0_8_11 = ["v0_8_8"]
v0_8_15 = ["v0_8_11"]
v0_8_16 = ["v0_8_15"]
v0_8_17 = ["v0_8_16"]
v0_8_19 = ["v0_8_17"]
v0_8_20 = ["v0_8_19"]
v0_8_22 = ["v0_8_20"]
v0_8_23 = ["v0_8_22"]
v0_8_25 = ["v0_8_23"]
v0_8_27 = ["v0_8_25"]
v0_8_31 = ["v0_8_27"]

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
workspace = true

[dependencies.glib-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[build-dependencies]
pkg-config = "0.3.27"
system-deps = "7.0.1"

[dev-dependencies]
shell-words = "1.1.0"
tempfile = "3"
