[package]
name = "aravis-utils"
version = "0.8.2"
description = "command line utilities for interacting with GenICam cameras"
authors = ["RoboHouse <robohouse@robovalley.com>", "Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
keywords = ["GenICam", "GigE", "USB3", "Vision", "Camera"]
categories = ["multimedia::video"]
repository = "https://github.com/robohouse-delft/aravis-rs"

edition = "2018"

[features]
default = ["gui", "bayer"]
gui     = ["show-image"]
bayer   = ["aravis/bayer"]

[dependencies]
aravis     = { version="0.8.2", path="../aravis", features = ["bayer", "v0_8_22"] }
chrono     = "0.4.23"
env_logger = "0.10.0"
image      = "0.24.5"
log        = "0.4.17"
png        = "0.17.7"
show-image = { version="0.13.1", optional=true, features=["image", "save"] }
structopt  = "0.3.26"
