[package]
name = "aravis-utils"
version = "0.9.0"
description = "command line utilities for interacting with GenICam cameras"
authors = ["RoboHouse <robohouse@robovalley.com>", "Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
keywords = ["GenICam", "GigE", "USB3", "Vision", "Camera"]
categories = ["multimedia::video"]
repository = "https://github.com/robohouse-delft/aravis-rs"

edition = "2021"

[features]
default  = ["bayer", "gui", "usb-mode"]
bayer    = ["aravis/bayer"]
gui      = ["show-image"]
usb-mode = ["aravis/v0_8_22"]

[dependencies]
aravis     = { version = "0.9.0", path = "../aravis" }
chrono     = "0.4.24"
clap       = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
image      = { workspace = true }
log        = "0.4.17"
png        = "0.17.8"
show-image = { version = "0.13.1", optional = true, features = ["image", "save"] }
