[package]
name = "aravis"
version = "0.8.3"
description = "safe bindings for Aravis, a vision library for genicam based cameras"
authors = [
	"RoboHouse <robohouse@robovalley.com>",
	"Maarten de Vries <maarten@de-vri.es>",
]
license = "BSD-2-Clause"
keywords = ["GenICam", "GigE", "USB3", "Vision", "Camera"]
categories = ["multimedia::video"]
repository = "https://github.com/robohouse-delft/aravis-rs"
documentation = "https://docs.rs/aravis"

[features]
dox = ["aravis-sys/dox", "nightly"]
nightly = []
v0_8_3 = []
v0_8_6 = ["v0_8_3"]
v0_8_8 = ["v0_8_6"]
v0_8_11 = ["v0_8_8"]
v0_8_15 = ["v0_8_11"]
v0_8_16 = ["v0_8_15"]
v0_8_17 = ["v0_8_16"]
v0_8_19 = ["v0_8_17"]
v0_8_20 = ["v0_8_19"]
v0_8_22 = ["v0_8_20"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
aravis-sys = { version = "=0.8.3", path = "../aravis-sys", features = ["v0_8_22"] }
bayer = { version = "0.1.5", optional = true }
gio = "0.16.7"
gio-sys = "0.16.3"
glib = "0.16.7"
glib-sys = "0.16.3"
gobject-sys = "0.16.3"
image = "0.24.5"

[build-dependencies]
rustc_version = "0.4.0"
