[package]
name = "aravis"
version = "0.9.2"
description = "safe bindings for Aravis, a vision library for genicam based cameras"
authors = [
	"RoboHouse <robohouse@robovalley.com>",
	"Maarten de Vries <maarten@de-vri.es>",
]
license = "BSD-2-Clause"
keywords = ["GenICam", "GigE", "USB3", "Vision", "Camera"]
categories = ["multimedia::video"]
repository = "https://github.com/robohouse-delft/aravis-rs"
documentation = "https://docs.rs/aravis"

edition = "2015"

[features]
default = ["image"]
image = ["dep:image"]
dox = ["aravis-sys/dox", "nightly"]
nightly = []
v0_8_3 = []
v0_8_6 = ["v0_8_3", "aravis-sys/v0_8_3"]
v0_8_8 = ["v0_8_6", "aravis-sys/v0_8_6"]
v0_8_11 = ["v0_8_8", "aravis-sys/v0_8_11"]
v0_8_15 = ["v0_8_11", "aravis-sys/v0_8_15"]
v0_8_16 = ["v0_8_15", "aravis-sys/v0_8_16"]
v0_8_17 = ["v0_8_16", "aravis-sys/v0_8_17"]
v0_8_19 = ["v0_8_17", "aravis-sys/v0_8_19"]
v0_8_20 = ["v0_8_19", "aravis-sys/v0_8_20"]
v0_8_22 = ["v0_8_20", "aravis-sys/v0_8_22"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
aravis-sys = { version = "=0.9.0", path = "../aravis-sys" }
bayer = { version = "0.1.5", optional = true }
gio = { workspace = true }
gio-sys = { workspace = true }
glib = { workspace = true }
glib-sys = { workspace = true }
gobject-sys = { workspace = true }
image = { workspace = true, optional = true }

[build-dependencies]
rustc_version = "0.4.0"
